# booking

./: .dockerignore  .env.example  .gitignore  DOCKER_DATABASE_FIX.md  Dockerfile  LICENSE  README.md  check_oidc_config.py  cleanup_migrations.py  debug_jwks.py  demo_migrations.py  deploy.sh  docker-compose.yml  entrypoint.sh  fix_oidc_providers.py  migrate.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_jwks_fix.py  test_schema_version.py
docs/: ADDITIONAL_FORMAT_FIXES.md  AUTHENTICATION_FLOW_FIXES.md  CRITICAL_SECURITY_FIX_SUMMARY.md  DATABASE_MIGRATIONS.md  DATE_FORMAT_UPDATE.md  DEPLOYMENT.md  EMAIL_SCHEDULING_SETUP.md  EMAIL_SCHEDULING_TIMEZONE_FIX.md  JWKS_VALIDATION_FIX.md  JWT_TOKEN_RENEWAL_IMPLEMENTATION.md  LOGGING_IMPLEMENTATION_SUMMARY.md  OIDC_CLAIMS_MAPPING_IMPLEMENTATION.md  OIDC_HTTPS_REDIRECT_URI_FIX.md  OIDC_SCOPES_AND_LOGGING_IMPLEMENTATION.md  TIMEZONE_AWARE_LOGGING_IMPLEMENTATION.md  TIMEZONE_FIXES_SUMMARY.md  USER_DELETION_FIX_SUMMARY.md
migration/: check_bookings_schema.py  check_foreign_keys.py  cleanup_orphaned_data.py  fix_styling_settings.py  migrate_backup_settings.py  migrate_booking_preservation.py  migrate_cascade_delete.py  migrate_dynamic_reports_scheduling.py  migrate_email_timezone.py  migrate_login_logo_size.py  migrate_logs_schema.py  migrate_oidc_claims_mapping.py  migrate_oidc_display_name.py  migrate_oidc_scopes.py  migrate_scheduled_dynamic_reports.py  migrate_styling_settings.py  migrate_timezone.py  migrate_user_cascade_delete.py  restore_deleted_users.py  test_api_user_deletion.py  test_user_deletion.py  test_user_deletion_with_fk.py
static/: browserconfig.xml  manifest.json  sw.js
templates/: base.html  index.html  login.html  modals.html  oidc_selection.html
tests/: check_oidc_providers.py  monitor_scheduler.py  run_scheduler.py  test_admin_security_fix.py  test_auth_flow_simple.py  test_backup_functionality.py  test_claims_discovery_fix.py  test_complete_scheduler.py  test_logging.py  (+22 more)
(+106 files in other folders)
