[project]
name = "booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]",
    "sqlalchemy",
    "python-jose[cryptography]",
    "requests",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.20",
    "authlib",
    "httpx>=0.28.1",
    "pytz>=2025.2",
    "itsdangerous>=2.2.0",
    "anyio>=4.9.0",
    "markupsafe>=3.0.2",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
